--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  gap: 30px;
 }
 
 .App-logo {
@@ -35,4 +41,22 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h1 {
+  margin: 0;
+  font-size: 4rem;
+}
+
+.wrapper {
+  width: 25%;
+  display: flex;
+  justify-content: space-around;
+}
+
+button {
+  width: 4rem;
+  height: 4rem;
+  font-size: 2rem;
+  cursor: pointer;
 }
